# PI5-Drawer-TFT-display

./: README.md
Pi_Draw/: CMakeLists.txt  README.md
Pi_Draw/include/: colors.h  commands.h  display_types.h  file_dialog.h  spi_pi.h  tool_panel.h  tools.h
Pi_Draw/src/: display_pi.cpp  draw.cpp  file_dialog.cpp  main.cpp  spi_pi.cpp  tool_panel.cpp
Release/: CMakeLists.txt  README.md  TFT_Display.pro  canvas.cpp  canvas.h  colors.h  commands.h  display_pi.cpp  display_pi.h  display_types.h  draw.cpp  spi_pi.cpp  Памятка.txt  Сборка.txt
